--- a/prak_3_ML_Hierarcial_Clustering.ipynb
+++ b/prak_3_ML_Hierarcial_Clustering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2ZWd7sZSXX2lisNhqw0bj",
+      "authorship_tag": "ABX9TyPJ/u6aD5zBnkftKO+nl0yb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "F2RjAsNGHmF4"
       },
@@ -55,7 +55,7 @@
         "id": "JA7GFaYDIMDH",
         "outputId": "9ff20333-db86-49e8-bf1b-342c3a9e4d7e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,8 +369,17 @@
       "metadata": {
         "id": "9TV0JZHnJQxV"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "iloc adalah metode dari pandas DataFrame yang digunakan(indeks) Daftar ini menentukan kolom ke-3 dan ke-4 berdasarkan indeks (dimulai dari 0)."
+      ],
+      "metadata": {
+        "id": "SuQLlKdLThl1"
+      }
     },
     {
       "cell_type": "code",
@@ -390,7 +399,7 @@
         "id": "4bJ4OLwDJpOX",
         "outputId": "f937128a-3e36-4bb3-cc72-c7fd2b5dafeb"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -419,7 +428,7 @@
         "id": "OnSZVHN9Jxz_",
         "outputId": "9c12c3f5-25fa-448d-eae5-6f83302b30d3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +463,7 @@
         "id": "7ZF6Pq6wJz7O",
         "outputId": "c2ba17f6-46c6-4d6b-9c64-8e05323f9c2f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
